[package]
name = "poor-jimmy"
version = "2.0.1"
edition = "2024"

[dependencies]
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.songbird]
# Pointing at beer-psi's fork until DAVE support lands in a mainline songbird release.
# Track upstream PR: https://github.com/serenity-rs/songbird/pull/291
git = "https://github.com/beerpsi-forks/songbird"
branch = "davey"
default-features = true
features = ["builtin-queue"]

[dependencies.symphonia]
version = "0.5.5"

[dependencies.serenity]
version = "0.12.5"
default-features = false
features = [
  "builder",
  "cache",
  "collector",
  "client",
  "gateway",
  "model",
  "rustls_backend",
  "unstable_discord_api",
  "voice",
]

[dependencies.tokio]
version = "1.50.0"
features = ["macros", "rt-multi-thread"]
